--- a/hymn.cabal
+++ b/hymn.cabal
@@ -26,3 +26,21 @@ executable hymn
                      , optparse-applicative
                      , text
   ghc-options:         -Wall
+
+test-suite hymn-test
+  type:                exitcode-stdio-1.0
+  hs-source-dirs:      test
+  main-is:             Spec.hs
+  other-modules:       Properties, Integration, Golden
+  build-depends:       base >= 4.7 && < 5
+                     , hymn-core
+                     , hymn-xml
+                     , hspec
+                     , QuickCheck
+                     , temporary
+                     , directory
+                     , filepath
+                     , bytestring
+                     , text
+  ghc-options:         -Wall
+  default-language:    Haskell2010
